<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="error_no_token">Token not found</string>
    <string name="email_password_empty">Please enter both email and password</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="login_success">Login successful</string>
    <string name="all_field">Please fill in all fields.</string>
    <string name="invalid_email">Invalid email format.</string>
    <string name="regist_success">Registration successful!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="add_story_label">+</string>
    <string name="story_name_placeholder">Name</string>
    <string name="story_description_placeholder">Description</string>
    <string name="logout">Logout</string>
    <string name="logout_success_message">Logout success</string>
    <string name="error_message">Something went wrong</string>
    <string name="error_story_not_found">Story not found</string>
    <string name="take_photo">Camera</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="enter_story_description">Type here..</string>
    <string name="upload_story_button">Upload Story</string>
    <string name="permission_denied">Permission denied</string>
    <string name="upload_story">Upload Story</string>
    <string name="description_empty">Please fill the description</string>
    <string name="camera_failed">Failed pick a photo</string>
    <string name="no_image_selected">No image selected</string>
    <string name="story_uploaded">Story uploaded</string>
    <string name="camera_button_desc">Camera Button</string>
    <string name="galery_button_desc">Gallery button</string>
    <string name="title_activity_maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="error_message_story">Could not refresh the story</string>
    <string name="kata_login1">Sudah siap untuk berbagi cerita?</string>
    <string name="logo_image">logo image</string>
    <string name="kata_login">Masukkan dulu datamu ya</string>
    <string name="masukkan_data_anda_dengan_benar">Masukkan data anda dengan benar</string>
    <string name="lengkapi_data_dirimu_di_bawah_ini_ya">Lengkapi data dirimu di bawah ini ya</string>
    <string name="iv_story_image">iv story image</string>
    <string name="logo_image_view">logo image view</string>
    <string name="thumbnail">thumbnail</string>
</resources>

